# teams.py

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  AsyncFunction_Design.md  CLAUDE.md  CONFIG_USAGE_EXAMPLES.md  CONSTANTS_AUDIT.md  CONTRIBUTING.md  IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  RELEASE.md  SETUP_COMPLETE.md  SUMMARY.md  SUPPORT.md  TEAMS_GRAPH_PYTHON_IMPLEMENTATION_PLAN.md  TEAMS_GRAPH_PYTHON_IMPLEMENTATION_PLAN_REVISED.md  TEAMS_PY_SDK_ANALYSIS.md  demo_graph_clients.py  mypy.ini  pyproject.toml  pyrightconfig.json  simple_test.py  test_graph_clients.py  version.json
.azdo/: publish.yml  sdl.yml
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/scripts/: analyze_issue.py
.github/workflows/: ci.yml  claude-code-review.yml  issue-analysis.yml  release.yml  security-updates.yml
docs/: conf.py
examples/: README.md  config_example.py
examples/a2a/: .env.alice.template  .env.bob.template  README.md  pyproject.toml
examples/a2a-test/: README.md  pyproject.toml
examples/a2a-test/src/: a2a_client.py  a2a_executor.py  a2a_server.py  a2a_utils.py  agent.py  analyst_client.py  bot_a.py  bot_b.py  cards.py  host_agent.py  main.py  messages.py  orchestrator.py  prompts.py  state.py  teams_helpers.py
examples/a2a-test/src/data_analyst/: __init__.py  __main__.py  agent.py  cards.py  prompts.py
examples/a2a-test/src/file_search/: __init__.py  agent.py
examples/a2a-test/src/kb_agent/: __main__.py  agent.py  cards.py  index.py  ingest.py  prompts.py
examples/a2a-test/src/kb_agent/knowledge_base/: engineering_handbook.md  engineering_metrics.md  expense_policy.md  headcount.md  onboarding.md  pto_policy.md  quarterly_revenue.md  remote_work.md  security.md
examples/a2a/src/: a2a_client.py  a2a_server.py  agent.py  main.py  types_.py
examples/agent-framework-integration/: DIFF.md  README.md  pyproject.toml
examples/agent-framework-integration/src/: approval.py  chat-prompt.py  main.py
examples/agent365/: README.md  pyproject.toml
examples/ai-agentframework/: README.md  pyproject.toml
examples/ai-agentframework/src/: agent.py  instructions.txt  local_tools.py  main.py  mcp_tools.py
examples/ai-chat/: README.md  pyproject.toml
examples/ai-chat/src/: main.py
examples/ai-mcp/: README.md  pyproject.toml
examples/ai-test/: README.md  pyproject.toml
examples/botbuilder/: README.md  pyproject.toml
examples/botbuilder/src/: main.py
examples/botbuilder/src/bots/: __init__.py  echo_bot.py
examples/cards/: pyproject.toml
examples/dialogs/: pyproject.toml
examples/echo/: pyproject.toml
examples/formatted-messaging/: README.md  pyproject.toml
examples/formatted-messaging/src/: main.py
examples/graph/: README.md  pyproject.toml
examples/history/: README.md  pyproject.toml
examples/history/src/: main.py
examples/html-widgets/: README.md  pyproject.toml
examples/html-widgets/src/: main.py
examples/html-widgets/src/widgets/: __init__.py  calltool.py  fullscreen.py  host_context.py  messageback.py  multi_tool.py  open_link.py  simple.py  update_context.py
examples/http-adapters/: README.md  pyproject.toml
examples/http-adapters/src/: fastapi_non_managed.py  starlette_adapter.py  starlette_echo.py
examples/mcp-client/: README.md  pyproject.toml
examples/mcp-server/: README.md  pyproject.toml
examples/mcp-server/src/: app.py  main.py  mcp_tools.py  models.py  state.py
examples/meetings/: README.md  pyproject.toml
examples/meetings/src/: main.py
examples/message-extensions/: pyproject.toml
examples/oauth/: pyproject.toml
examples/proactive-messaging/: README.md  pyproject.toml
examples/quoted-replies/: README.md  pyproject.toml
examples/quoted-replies/src/: main.py
examples/quoting/: README.md  pyproject.toml
examples/quoting/src/: main.py
examples/reactions/: README.md  pyproject.toml
examples/reactions/src/: main.py
examples/stream/: README.md  pyproject.toml
examples/suggested-actions/: README.md  pyproject.toml
examples/suggested-actions/src/: main.py
examples/tab/: pyproject.toml
examples/targeted-messages/: README.md  pyproject.toml
examples/targeted-messages/appPackage/: manifest.json
examples/targeted-messages/src/: main.py
examples/threading/: README.md  pyproject.toml
scripts/: create_package.py  release.py
src/teams_py/: api.py  app.py  main.py
stubs/msal/: __init__.pyi
templates/package/: cookiecutter.json
templates/package/{{cookiecutter.pypi_package_name}}/: README.md  pyproject.toml
templates/package/{{cookiecutter.pypi_package_name}}/src/microsoft_teams/{{cookiecutter.pypi_package_name}}/: __init__.py
templates/test/: cookiecutter.json
templates/test/{{cookiecutter.test_app_name}}/: README.md  pyproject.toml
templates/test/{{cookiecutter.test_app_name}}/appPackage/: manifest.json
tests/: example_empty_params.py
tests/a2a-test/: pyproject.toml
tests/ai-test/: README.md  pyproject.toml
tests/ai-test/src/: main.py
tests/ai-test/src/handlers/: feedback_management.py  function_calling.py  memory_management.py  plugins.py
tests/botbuilder-test/: pyproject.toml
tests/cards/: pyproject.toml
tests/graph/: README.md  aad.manifest.json  pyproject.toml  teamsapp.local.yml  teamsapp.yml
tests/graph/appPackage/: manifest.json
tests/graph/infra/: azure.bicep  azure.local.bicep  azure.parameters.json  azure.parameters.local.json
tests/graph/infra/botRegistration/: azurebot.bicep
tests/graph/src/: main.py
tests/mcp/: pyproject.toml
tests/mcp-server/: README.md  pyproject.toml
tests/mcp-server/src/: main.py
tests/mcp/src/: main.py
tests/oauth/: pyproject.toml
tests/oauth/TeamsApp/: README.md
tests/oauth/src/: main.py
tools/hatch-nbgv/: pyproject.toml
tools/hatch-nbgv/src/hatch_nbgv/: __init__.py  hooks.py
tools/hatch-teams-build/: README.md  pyproject.toml
tools/hatch-teams-build/src/hatch_teams_build/: __init__.py  hooks.py  metadata_hook.py  version_source.py
tools/hatch-teams-build/tests/: test_metadata_hook.py
(+82 files in other folders)
