[project]
name = "microsoft-teams"
version = "0.1.0"
description = "A suite of packages used to build on the Teams Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "microsoft-teams-app",
    "microsoft-teams-api",
    "microsoft-teams-cards", 
    "microsoft-teams-common",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
"microsoft-teams-app" = { workspace = true }
"microsoft-teams-api" = { workspace = true }
"microsoft-teams-common" = { workspace = true }
"microsoft-teams-cards" = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "poethepoet>=0.35.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
    "pyright>=1.1.403"
]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "ASYNC"]

[tool.ruff.lint.flake8-tidy-imports]
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest".msg = "Use `pytest` instead."

[tool.poe.tasks]
fmt = "ruff format"
lint = "ruff check"
check = ["fmt", "lint"]
test = "pytest"

[tool.hatch.build.targets.wheel]
packages = ["packages/*"]
