[tool.uv.sources]
"microsoft-teams-apps" = { workspace = true }
"microsoft-teams-api" = { workspace = true }
"microsoft-teams-common" = { workspace = true }
"microsoft-teams-cards" = { workspace = true }
"microsoft-teams-devtools" = { workspace = true }
"microsoft-teams-graph" = { workspace = true }
"microsoft-teams-ai" = { workspace = true }
"microsoft-teams-openai" = { workspace = true }
"microsoft-teams-mcpplugin" = { workspace = true }
"microsoft-teams-a2a" = { workspace = true }
"microsoft-teams-botbuilder" = { workspace = true }

[tool.uv.workspace]
members = ["packages/*", "examples/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "poethepoet>=0.35.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
    "pyright>=1.1.404",
    "cookiecutter>=2.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 120
fix = true
extend-exclude = ["[{][{]cookiecutter.pypi_package_name[}][}]"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "ASYNC"]

[tool.ruff.lint.flake8-tidy-imports]
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest".msg = "Use `pytest` instead."

[tool.ruff.lint.per-file-ignores]
"packages/cards/**/*.py" = ["E501"]
"packages/cards/**/__init__.py" = ["F403"]

[tool.poe.tasks]
fmt = "ruff format"
lint = "ruff check"
check = ["fmt", "lint"]
test = "pytest"
test-cov = "pytest --cov=packages --cov-report=term-missing --cov-report=html"
test-cov-xml = "pytest --cov=packages --cov-report=xml"

[tool.coverage.run]
source = ["packages"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.hatch.build.targets.wheel]
packages = ["packages/*"]
