[project]
name = "a2a"
version = "0.1.0"
description = "Teams bot with A2A-powered content planning and analytics agents"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "a2a-sdk[http-server]>=0.3.7",
    "agent-framework-a2a",
    "agent-framework-openai",
    "microsoft-teams-apps",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
