[project]
name = "a2a-test"
version = "0.1.0"
description = "Two Teams bots talking to each other via the official a2a-sdk, exchanging Adaptive Cards"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-common",
    "microsoft-teams-cards",
    "a2a-sdk[core,http-server]>=0.3.7",
    "agent-framework-core",
    "agent-framework-openai",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
microsoft-teams-common = { workspace = true }
microsoft-teams-cards = { workspace = true }
