[project]
name = "a2a"
version = "0.1.0"
description = "Two Teams bots (Alice and Bob) that hand users off to each other over A2A with proactive DM"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-common",
    "microsoft-teams-cards",
    "a2a-sdk[core,http-server]>=0.3.7",
    "agent-framework-core",
    "agent-framework-openai",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
microsoft-teams-common = { workspace = true }
microsoft-teams-cards = { workspace = true }
