[project]
name = "ai-agentframework"
version = "0.1.0"
description = "Microsoft Teams bot using the agent-framework library"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "agent-framework-core",
    "agent-framework-openai",
    "msgraph-sdk>=1.0.0",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }