[project]
name = "ai-chat"
version = "0.1.0"
description = "AI-powered chat bot using PydanticAI with streaming and memory"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-api",
    "microsoft-teams-devtools",
    "pydantic-ai>=0.1.0",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
microsoft-teams-api = { workspace = true }
microsoft-teams-devtools = { workspace = true }
