[project]
name = "formatted-messaging"
version = "0.1.0"
description = "Formatted messaging app — demonstrates markdown, extendedmarkdown, xml, and plain text formats"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-api",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
