[project]
name = "history"
version = "0.1.0"
description = "Message history test bot"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-api",
    "microsoft-teams-graph",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
microsoft-teams-api = { workspace = true }
microsoft-teams-graph = { workspace = true }
