[project]
name = "html-widgets"
version = "0.1.0"
description = "HTML Widgets example bot"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-api",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
