[project]
name = "http-adapters"
version = "0.1.0"
description = "Examples showing custom HttpServerAdapter and non-managed server patterns"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-api",
    "starlette",
    "uvicorn",
    "httptools",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
