[project]
name = "mcp-server"
version = "0.1.0"
description = "Human-in-the-loop MCP tools backed by Teams bot proactive messaging"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "dotenv>=0.9.9",
    "mcp>=1.13.1",
    "microsoft-teams-apps",
    "microsoft-teams-graph"
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
microsoft-teams-graph = { workspace = true }
