[project]
name = "mcp-server"
version = "0.1.0"
description = "Human-in-the-loop MCP tools backed by Teams bot proactive messaging"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dotenv>=0.9.9",
    "mcp>=1.27.2",
    "microsoft-teams-apps",
    "microsoft-teams-graph"
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
microsoft-teams-graph = { workspace = true }
