[project]
name = "meetings"
version = "0.1.0"
description = "Meetings app"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-api",
    "microsoft-teams-cards",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
microsoft-teams-api = { workspace = true }
microsoft-teams-cards = { workspace = true }
