[project]
name = "quoted-replies"
version = "0.1.0"
description = "Quoted replies example - demonstrates quoting previous messages in conversations"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-api",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
