[project]
name = "quoting"
version = "0.1.0"
description = "Quoting example - demonstrates various ways to quote previous messages in conversations"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-api",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
