[project]
name = "suggested-actions"
version = "0.1.0"
description = "Suggested Action Submit example"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-api",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
