[project]
name = "targeted-messages"
version = "0.1.0"
description = "Targeted messages example - demonstrates ephemeral messages visible only to specific recipients"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
    "microsoft-teams-api",
    "microsoft-teams-devtools"
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
