[project]
name = "botbuilder-test"
version = "0.1.0"
description = "test to make sure botbuilder plugin seemlessly integrates with botbuilder and teamsai"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-apps",
]

[tool.uv.sources]
microsoft-teams-apps = { workspace = true }
