[project]
name = "oauth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-app",
    "microsoft-teams-graph",
    "azure-identity>=1.15.0",
    "msgraph-sdk>=1.0.0"
]

[tool.uv.sources]
microsoft-teams-app = { workspace = true }
microsoft-teams-graph = { workspace = true }
