[project]
name = "hatch-teams-build"
version = "0.1.0"
description = "Hatchling plugin for Teams SDK: nbgv version source with graceful fallback and workspace dependency versioning"
authors = [{ name = "Microsoft", email = "TeamsAISDKFeedback@microsoft.com" }]
requires-python = ">=3.12"
license = "MIT"
dependencies = ["hatchling>=1.25.0", "nbgv-python>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points.hatch]
hatch-teams-build = "hatch_teams_build.hooks"

[tool.hatch.build.targets.wheel]
packages = ["src/hatch_teams_build"]

[tool.hatch.build.targets.sdist]
include = ["src"]
