[project]
name = "{{cookiecutter.pypi_package_name}}"
dynamic = ["version"]
description = "{{cookiecutter.project_short_description}}"
authors = [{ name = "Microsoft", email = "TeamsAISDKFeedback@microsoft.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.15"
repository = "https://github.com/microsoft/teams.py"
keywords = ["microsoft", "teams", "ai", "bot", "agents"]
license = "MIT"
dependencies = []
{% if not cookiecutter.core %}
[tool.microsoft-teams.metadata]
external = true
{% endif %}

[build-system]
requires = ["hatchling", "hatch-teams-build"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "teams-build"

[tool.hatch.metadata.hooks.teams-build]

[tool.hatch.build.targets.wheel]
packages = ["src/microsoft_teams"]

[tool.hatch.build.targets.sdist]
include = ["src"]
