[project]
name = "{{cookiecutter.test_app_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "microsoft-teams-app",
]

[tool.uv.sources]
microsoft-teams-app = { workspace = true }
